re run analysis with repetitions

--- a/paper/correlation_table_four_types.tex
+++ b/paper/correlation_table_four_types.tex
@@ -16,13 +16,14 @@ $C_{min}$            &            0.000 &         0.084 &            0.000 &    
 $DC$ to $C$ rate     &            0.127 &        -0.100 &            0.509 &        -0.504 &           -0.018 &         0.033 &            0.341 &        -0.016 \\
 $DD$ to $C$ rate     &            0.412 &        -0.396 &            0.533 &        -0.436 &           -0.103 &         0.176 &            0.378 &        -0.263 \\
 $N$                  &            0.000 &        -0.009 &           -0.000 &         0.002 &           -0.000 &         0.003 &           -0.000 &         0.001 \\
-$e$                  &              NaN &           NaN &              NaN &           NaN &            0.000 &         0.165 &            0.000 &        -0.058 \\
+$k$                  &            0.000 &        -0.002 &           -0.000 &         0.003 &           -0.000 &         0.001 &           -0.000 &        -0.008 \\
 $n$                  &            0.000 &        -0.125 &           -0.000 &        -0.024 &              NaN &           NaN &              NaN &           NaN \\
-$p$                  &              NaN &           NaN &           -0.000 &         0.207 &              NaN &           NaN &           -0.000 &        -0.650 \\
+$p_e$                &              NaN &           NaN &              NaN &           NaN &            0.000 &         0.165 &            0.000 &        -0.058 \\
+$p_n$                &              NaN &           NaN &           -0.000 &         0.207 &              NaN &           NaN &           -0.000 &        -0.650 \\
 Make use of game     &           -0.003 &        -0.022 &            0.025 &        -0.082 &           -0.053 &        -0.108 &            0.013 &        -0.016 \\
-Make use of length   &           -0.154 &         0.117 &            0.008 &        -0.134 &           -0.046 &        -0.081 &            0.015 &        -0.018 \\
+Make use of length   &           -0.158 &         0.124 &            0.005 &        -0.123 &           -0.025 &        -0.090 &            0.014 &        -0.016 \\
 SSE                  &            0.473 &        -0.452 &            0.463 &        -0.337 &           -0.156 &         0.223 &            0.305 &        -0.259 \\
-memory usage         &           -0.084 &         0.095 &           -0.007 &        -0.016 &              NaN &           NaN &              NaN &           NaN \\
+memory usage         &           -0.082 &         0.095 &           -0.007 &        -0.017 &              NaN &           NaN &              NaN &           NaN \\
 stochastic           &            0.006 &        -0.024 &            0.022 &        -0.026 &            0.002 &        -0.130 &            0.021 &        -0.013 \\
 \bottomrule
 \end{tabular}
