--- a/paper/performance_noise_table.tex
+++ b/paper/performance_noise_table.tex
@@ -1,21 +1,22 @@
 \begin{tabular}{lr}
 \toprule
-Name                &                   $\bar{r} $    \\
+{} &  \$\textbackslash bar\{r\}\$ in noise tournaments \\
+Name                  &                                 \\
 \midrule
-Grumpy              &                         0.13953 \\
-$e$                 &                         0.19048 \\
-Cooperator          &                         0.19565 \\
-Tit For 2 Tats      &                         0.20520 \\
-Cycle Hunter        &                         0.22222 \\
-Risky QLearner      &                         0.22424 \\
-Retaliate 3         &                         0.23077 \\
-Retaliate 2         &                         0.23762 \\
-Retaliate           &                         0.24309 \\
-Hard Tit For 2 Tats &                         0.24658 \\
-Limited Retaliate 3 &                         0.25000 \\
-ShortMem            &                         0.25272 \\
-Limited Retaliate   &                         0.25698 \\
-Limited Retaliate 2 &                         0.26027 \\
-$\phi$              &                         0.26201 \\
+Grumpy                &                         0.14020 \\
+\$e\$                   &                         0.19388 \\
+Tit For 2 Tats        &                         0.20617 \\
+Slow Tit For Two Tats &                         0.20962 \\
+Cycle Hunter          &                         0.21538 \\
+Risky QLearner        &                         0.22222 \\
+Retaliate 3           &                         0.22887 \\
+Cycler CCCCCD         &                         0.23507 \\
+Retaliate 2           &                         0.23913 \\
+Defector Hunter       &                         0.24038 \\
+Retaliate             &                         0.24177 \\
+Hard Tit For 2 Tats   &                         0.25000 \\
+ShortMem              &                         0.25286 \\
+Limited Retaliate 3   &                         0.25316 \\
+Limited Retaliate     &                         0.25706 \\
 \bottomrule
 \end{tabular}
