--- a/paper/performance_probend_noise_table.tex
+++ b/paper/performance_probend_noise_table.tex
@@ -1,21 +1,22 @@
 \begin{tabular}{lr}
 \toprule
-Name                &       $\bar{r}$   \\
+{} &  \$\textbackslash bar\{r\}\$ in probend\_noise tournaments \\
+Name                &                                         \\
 \midrule
-Alternator          &                                 0.30390 \\
-$\phi$              &                                 0.31025 \\
-$e$                 &                                 0.31293 \\
-$\pi$               &                                 0.31818 \\
-Limited Retaliate   &                                 0.35294 \\
-Anti Tit For Tat    &                                 0.35429 \\
-Retaliate 3         &                                 0.35484 \\
+Alternator          &                                 0.30370 \\
+\$\textbackslash phi\$              &                                 0.30978 \\
+\$e\$                 &                                 0.31250 \\
+\$\textbackslash pi\$               &                                 0.31686 \\
+Limited Retaliate   &                                 0.35263 \\
+Anti Tit For Tat    &                                 0.35431 \\
+Retaliate 3         &                                 0.35563 \\
 Limited Retaliate 3 &                                 0.35563 \\
-Retaliate           &                                 0.35588 \\
-Retaliate 2         &                                 0.35714 \\
-Limited Retaliate 2 &                                 0.36066 \\
-Hopeless            &                                 0.36913 \\
-Arrogant QLearner   &                                 0.40526 \\
-Cautious QLearner   &                                 0.40711 \\
-Risky QLearner      &                                 0.41989 \\
+Retaliate           &                                 0.35714 \\
+Retaliate 2         &                                 0.35767 \\
+Limited Retaliate 2 &                                 0.36134 \\
+Hopeless            &                                 0.36842 \\
+Arrogant QLearner   &                                 0.40651 \\
+Cautious QLearner   &                                 0.40909 \\
+Fool Me Forever     &                                 0.41764 \\
 \bottomrule
 \end{tabular}
