--- a/paper/performance_probend_table.tex
+++ b/paper/performance_probend_table.tex
@@ -1,21 +1,22 @@
 \begin{tabular}{lr}
 \toprule
-Name              &               $\bar{r}$           \\
+{} &  \$\textbackslash bar\{r\}\$ in probend tournaments \\
+Name              &                                   \\
 \midrule
 Fortress4         &                           0.01266 \\
-Defector          &                           0.01444 \\
+Defector          &                           0.01429 \\
 Better and Better &                           0.01587 \\
-Tricky Defector   &                           0.01869 \\
-Fortress3         &                           0.02198 \\
-Gradual Killer    &                           0.02521 \\
-Aggravater        &                           0.02797 \\
+Tricky Defector   &                           0.01875 \\
+Fortress3         &                           0.02174 \\
+Gradual Killer    &                           0.02532 \\
+Aggravater        &                           0.02778 \\
 Raider            &                           0.03077 \\
 Cycler DDC        &                           0.04545 \\
-Hard Prober       &                           0.05085 \\
-SolutionB1        &                           0.06040 \\
-Meta Minority     &                           0.06040 \\
-Bully             &                           0.06061 \\
-Fool Me Forever   &                           0.07018 \\
-EasyGo            &                           0.07065 \\
+Hard Prober       &                           0.05128 \\
+SolutionB1        &                           0.06024 \\
+Meta Minority     &                           0.06077 \\
+Bully             &                           0.06081 \\
+Fool Me Forever   &                           0.07080 \\
+EasyGo            &                           0.07101 \\
 \bottomrule
 \end{tabular}
