--- a/paper/performance_standard_table.tex
+++ b/paper/performance_standard_table.tex
@@ -1,21 +1,22 @@
 \begin{tabular}{lr}
 \toprule
-Name                    &                     $\bar{r}$\\
+{} &  \$\textbackslash bar\{r\}\$ in standard tournaments \\
+Name                    &                                    \\
 \midrule
-Evolved HMM 5           &                            0.00658 \\
-Evolved FSM 16          &                            0.00990 \\
-EvolvedLookerUp2 2 2    &                            0.01064 \\
-Evolved FSM 16 Noise 05 &                            0.01639 \\
-PSO Gambler 2 2 2       &                            0.02139 \\
-Evolved ANN             &                            0.02874 \\
+Evolved HMM 5           &                            0.00667 \\
+Evolved FSM 16          &                            0.00995 \\
+EvolvedLookerUp2\_2\_2    &                            0.01064 \\
+Evolved FSM 16 Noise 05 &                            0.01667 \\
+PSO Gambler 2\_2\_2       &                            0.02143 \\
+Evolved ANN             &                            0.02878 \\
 Evolved ANN 5           &                            0.03390 \\
-PSO Gambler 1 1 1       &                            0.03723 \\
-Evolved FSM 4           &                            0.04839 \\
-PSO Gambler Mem1        &                            0.05000 \\
-Winner12                &                            0.05946 \\
-Fool Me Once            &                            0.06122 \\
-DBS                     &                            0.07087 \\
-DoubleCrosser           &                            0.07190 \\
-BackStabber             &                            0.07500 \\
+PSO Gambler 1\_1\_1       &                            0.03704 \\
+Evolved FSM 4           &                            0.04891 \\
+PSO Gambler Mem1        &                            0.05036 \\
+Winner12                &                            0.06011 \\
+Fool Me Once            &                            0.06140 \\
+DBS                     &                            0.07143 \\
+DoubleCrosser           &                            0.07200 \\
+BackStabber             &                            0.07519 \\
 \bottomrule
 \end{tabular}
