add slow tit for two tats

--- a/paper/list_of_strategies.tex
+++ b/paper/list_of_strategies.tex
@@ -147,6 +147,7 @@
 \item SelfSteem~\cite{Andre2013}
 \item ShortMem ~\cite{Andre2013}
 \item Shubik~\cite{Axelrod1980a}
+\item Slow Tit For Two Tats~\cite{axelrodproject}
 \item Slow Tit For Two Tats 2~\cite{prison}
 \item Sneaky Tit For Tat~\cite{axelrodproject}
 \item Soft Go By Majority~\cite{Axelrod1981, Mittal2009}
