--- a/paper/top_perfomances.tex
+++ b/paper/top_perfomances.tex
@@ -5,9 +5,9 @@
 & Name & $\bar{r}$ &                 Name & $\bar{r}$ &               Name & $\bar{r}$ &                 Name & $\bar{r}$ \\
 \midrule
 0  &            Evolved HMM 5 &   0.00667 &                 Grumpy &   0.14020 &          Fortress4 &   0.01266 &           Alternator &   0.30370 \\
-1  &           Evolved FSM 16 &   0.00995 &                    $e$ &   0.19388 &           Defector &   0.01429 &               $ phi$ &   0.30978 \\
+1  &           Evolved FSM 16 &   0.00995 &                    $e$ &   0.19388 &           Defector &   0.01429 &               $\phi$ &   0.30978 \\
 2  &     EvolvedLookerUp2 2 2 &   0.01064 &         Tit For 2 Tats &   0.20617 &  Better and Better &   0.01587 &                  $e$ &   0.31250 \\
-3  &  Evolved FSM 16 Noise 05 &   0.01667 &  Slow Tit For Two Tats &   0.20962 &    Tricky Defector &   0.01875 &                $ pi$ &   0.31686 \\
+3  &  Evolved FSM 16 Noise 05 &   0.01667 &  Slow Tit For Two Tats &   0.20962 &    Tricky Defector &   0.01875 &                $\pi$ &   0.31686 \\
 4  &        PSO Gambler 2 2 2 &   0.02143 &           Cycle Hunter &   0.21538 &          Fortress3 &   0.02174 &    Limited Retaliate &   0.35263 \\
 5  &              Evolved ANN &   0.02878 &         Risky QLearner &   0.22222 &     Gradual Killer &   0.02532 &     Anti Tit For Tat &   0.35431 \\
 6  &            Evolved ANN 5 &   0.03390 &            Retaliate 3 &   0.22887 &         Aggravater &   0.02778 &          Retaliate 3 &   0.35563 \\
