new draft with additions

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -326,6 +326,14 @@ https://www.lesswrong.com/posts/hamma4XgeNrsvAJv5/prisoner-s-dilemma-tournament-
   organization={ACM}
 }
 
+@incollection{Fudenberg2009,
+  title={The folk theorem in repeated games with discounting or with incomplete information},
+  author={Fudenberg, Drew and Maskin, Eric},
+  booktitle={A Long-Run Collaboration On Long-Run Games},
+  pages={209--230},
+  year={2009},
+  publisher={World Scientific}
+}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEST PRACTICES%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @article{Aberdour2007,
   title={Achieving quality in open-source software},
